--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ hostRule=drupal8.docker.localhost
 dbName=exampledatabase
 dbUser=exampleuser
 dbPass=examplepass
+
+# Time Zone
+timeZone=Asia/Jerusalem
