created a different var for adminer host rule

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ podName=docker-drupal8
 
 # VirtualHost address
 hostRule=drupal8.docker.localhost
+adminerHostRule=adminer.drupal8.docker.localhost
 
 # Database credentials
 dbName=exampledatabase
