replaced docker-compose restart: unless-stopped with always

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./drupal/themes:/var/www/html/themes
       - ./drupal/sites:/var/www/html/sites
       - ./msmtp/msmtprc:/etc/msmtprc
-    restart: unless-stopped
+    restart: always
     networks:
       - frontend
       - backend
@@ -24,7 +24,7 @@ services:
  
   mariadb:
     image: mariadb
-    restart: unless-stopped
+    restart: always
     networks:
       - backend
     labels:
@@ -41,7 +41,7 @@ services:
     image: zeenlym/mariadb-backup
     depends_on:
       - mariadb
-    restart: unless-stopped
+    restart: always
     networks:
       - backend
     labels:
@@ -59,7 +59,7 @@ services:
 
   adminer:
     image: adminer
-    restart: unless-stopped
+    restart: always
     depends_on:
       - mariadb
     networks:
