upgraded to traefik v2

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,9 @@ podName=docker-drupal8
 
 # VirtualHost address
 hostRule=drupal8.docker.localhost
-adminerHostRule=adminer.drupal8.docker.localhost
 
 # Database credentials
-dbName=exampledatabase
+dbName=exampledb
 dbUser=exampleuser
 dbPass=examplepass
 
